--- a/data/processed/project.ipynb
+++ b/data/processed/project.ipynb
@@ -11,6 +11,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10141eff",
+   "metadata": {},
+   "source": [
+    "#COSAS PARA HACER#\n",
+    "CREAR LOS FORKS \n",
+    "AGREGAR PRODUCTOS EN INGLES Y REEMPLAZAR EL CATEGORY NAME POR ESE \n",
+    "AGREGAR GEOLOCALIZACION \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2a7339fc",
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "59a8c777",
    "metadata": {},
    "outputs": [],
@@ -51,7 +62,15 @@
     "df = df.merge(products, on=\"product_id\", how=\"left\")\n",
     "\n",
     "# Agregar vendedores\n",
-    "df = df.merge(sellers, on=\"seller_id\", how=\"left\")\n"
+    "df = df.merge(sellers, on=\"seller_id\", how=\"left\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# REVISAR Y CARGAR CORRECTAMENTE \n",
+    "# Agregar Geo\n",
+    "#geo_avg = geo.groupby(\"zip_code_prefix\")[[\"latitude\", \"longitude\"]].mean().reset_index()\n",
+    "#df = df.merge(geo_avg, on=\"zip_code_prefix\", how=\"left\")\n"
    ]
   },
   {
@@ -301,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "2e1c5d22",
    "metadata": {},
    "outputs": [
@@ -309,68 +328,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 118310 entries, 0 to 118309\n",
-      "Data columns (total 39 columns):\n",
-      " #   Column                         Non-Null Count   Dtype  \n",
-      "---  ------                         --------------   -----  \n",
-      " 0   order_id                       118310 non-null  object \n",
-      " 1   customer_id                    118310 non-null  object \n",
-      " 2   order_status                   118310 non-null  object \n",
-      " 3   order_purchase_timestamp       118310 non-null  object \n",
-      " 4   order_approved_at              118295 non-null  object \n",
-      " 5   order_delivered_carrier_date   117056 non-null  object \n",
-      " 6   order_delivered_customer_date  115722 non-null  object \n",
-      " 7   order_estimated_delivery_date  118310 non-null  object \n",
-      " 8   order_item_id                  118310 non-null  int64  \n",
-      " 9   product_id                     118310 non-null  object \n",
-      " 10  seller_id                      118310 non-null  object \n",
-      " 11  shipping_limit_date            118310 non-null  object \n",
-      " 12  price                          118310 non-null  float64\n",
-      " 13  freight_value                  118310 non-null  float64\n",
-      " 14  customer_unique_id             118310 non-null  object \n",
-      " 15  customer_zip_code_prefix       118310 non-null  int64  \n",
-      " 16  customer_city                  118310 non-null  object \n",
-      " 17  customer_state                 118310 non-null  object \n",
-      " 18  payment_sequential             118307 non-null  float64\n",
-      " 19  payment_type                   118307 non-null  object \n",
-      " 20  payment_installments           118307 non-null  float64\n",
-      " 21  payment_value                  118307 non-null  float64\n",
-      " 22  review_id                      117332 non-null  object \n",
-      " 23  review_score                   117332 non-null  float64\n",
-      " 24  review_comment_title           13892 non-null   object \n",
-      " 25  review_comment_message         49682 non-null   object \n",
-      " 26  review_creation_date           117332 non-null  object \n",
-      " 27  review_answer_timestamp        117332 non-null  object \n",
-      " 28  product_category_name          116601 non-null  object \n",
-      " 29  product_name_lenght            116601 non-null  float64\n",
-      " 30  product_description_lenght     116601 non-null  float64\n",
-      " 31  product_photos_qty             116601 non-null  float64\n",
-      " 32  product_weight_g               118290 non-null  float64\n",
-      " 33  product_length_cm              118290 non-null  float64\n",
-      " 34  product_height_cm              118290 non-null  float64\n",
-      " 35  product_width_cm               118290 non-null  float64\n",
-      " 36  seller_zip_code_prefix         118310 non-null  int64  \n",
-      " 37  seller_city                    118310 non-null  object \n",
-      " 38  seller_state                   118310 non-null  object \n",
-      "dtypes: float64(13), int64(3), object(23)\n",
-      "memory usage: 35.2+ MB\n"
+      "                                         tipo  nulos\n",
+      "order_id                               object      0\n",
+      "customer_id                            object      0\n",
+      "order_status                           object      0\n",
+      "order_purchase_timestamp       datetime64[ns]      0\n",
+      "order_approved_at              datetime64[ns]     15\n",
+      "order_delivered_carrier_date   datetime64[ns]   1254\n",
+      "order_delivered_customer_date  datetime64[ns]   2588\n",
+      "order_estimated_delivery_date  datetime64[ns]      0\n",
+      "order_item_id                           int64      0\n",
+      "product_id                             object      0\n",
+      "seller_id                              object      0\n",
+      "shipping_limit_date            datetime64[ns]      0\n",
+      "price                                 float64      0\n",
+      "freight_value                         float64      0\n",
+      "customer_unique_id                     object      0\n",
+      "customer_zip_code_prefix                int64      0\n",
+      "customer_city                          object      0\n",
+      "customer_state                         object      0\n",
+      "payment_sequential                    float64      3\n",
+      "payment_type                           object      0\n",
+      "payment_installments                  float64      3\n",
+      "payment_value                         float64      3\n",
+      "review_id                              object    978\n",
+      "review_score                          float64    978\n",
+      "review_comment_title                   object      0\n",
+      "review_comment_message                 object      0\n",
+      "review_creation_date           datetime64[ns]    978\n",
+      "review_answer_timestamp        datetime64[ns]    978\n",
+      "product_category_name                  object      0\n",
+      "product_name_lenght                   float64   1709\n",
+      "product_description_lenght            float64   1709\n",
+      "product_photos_qty                    float64   1709\n",
+      "product_weight_g                      float64     20\n",
+      "product_length_cm                     float64     20\n",
+      "product_height_cm                     float64     20\n",
+      "product_width_cm                      float64     20\n",
+      "seller_zip_code_prefix                  int64      0\n",
+      "seller_city                            object      0\n",
+      "seller_state                           object      0\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "info_df = pd.DataFrame({\n",
+    "    \"tipo\": df.dtypes,\n",
+    "    \"nulos\": df.isnull().sum()\n",
+    "})\n",
+    "\n",
+    "print(info_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "585475f0",
+   "metadata": {},
+   "source": [
+    "Cambiar los tipos de dato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2ea96576",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'product_category_name_english'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mpandas/_libs/index.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/index.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'product_category_name_english'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseller_city\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseller_city\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)\n\u001b[1;32m     20\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseller_state\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseller_state\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproduct_category_name_english\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mproduct_category_name_english\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:4107\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4105\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4107\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4109\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3819\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3815\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3816\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3817\u001b[0m     ):\n\u001b[1;32m   3818\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3819\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3820\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3821\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3822\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3823\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3824\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'product_category_name_english'"
+     ]
+    }
+   ],
+   "source": [
+    "# A fecha\n",
+    "df[\"order_purchase_timestamp\"] = pd.to_datetime(df[\"order_purchase_timestamp\"])\n",
+    "df[\"order_approved_at\"] = pd.to_datetime(df[\"order_approved_at\"])\n",
+    "df[\"order_delivered_carrier_date\"] = pd.to_datetime(df[\"order_delivered_carrier_date\"])\n",
+    "df[\"order_delivered_customer_date\"] = pd.to_datetime(df[\"order_delivered_customer_date\"])\n",
+    "df[\"order_estimated_delivery_date\"] = pd.to_datetime(df[\"order_estimated_delivery_date\"])\n",
+    "df[\"review_creation_date\"] = pd.to_datetime(df[\"review_creation_date\"])\n",
+    "df[\"review_answer_timestamp\"] = pd.to_datetime(df[\"review_answer_timestamp\"])\n",
+    "df[\"shipping_limit_date\"] = pd.to_datetime(df[\"shipping_limit_date\"])\n",
+    "\n",
+    "# A string\n",
+    "df[\"customer_city\"] = df[\"customer_city\"].astype(str)\n",
+    "df[\"customer_state\"] = df[\"customer_state\"].astype(str)\n",
+    "df[\"payment_type\"] = df[\"payment_type\"].astype(str)\n",
+    "df[\"review_comment_title\"] = df[\"review_comment_title\"].astype(str)\n",
+    "df[\"review_comment_message\"] = df[\"review_comment_message\"].astype(str)\n",
+    "df[\"customer_city\"] = df[\"customer_city\"].astype(str)\n",
+    "df[\"order_status\"] = df[\"order_status\"].astype(str)\n",
+    "df[\"seller_city\"] = df[\"seller_city\"].astype(str)\n",
+    "df[\"seller_state\"] = df[\"seller_state\"].astype(str)\n",
+    "df[\"product_category_name_english\"] = df[\"product_category_name_english\"].astype(str)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89935ecc",
+   "id": "854771a0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c4703be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
